--- a/x86_64-w64-mingw32/Dockerfile
+++ b/x86_64-w64-mingw32/Dockerfile
@@ -17,9 +17,13 @@ RUN \
 
 USER builder
 
+ENV HOST i686-w64-mingw32
+ENV BUILD x86_64-w64-mingw32
+ENV TARGET x86_64-w64-mingw32
 ENV BUILDROOT /home/builder/mingw
 ENV SRC $BUILDROOT/sources
 ENV DEST $BUILDROOT/dest
+ENV PREFIX $DEST/$TARGET
 
 RUN \
 	mkdir -p $SRC && \
@@ -27,6 +31,8 @@ RUN \
 
 RUN \
 	cd $SRC && \
+	wget https://gmplib.org/download/gmp/gmp-6.0.0a.tar.bz2 && \
+	tar xvjf gmp-6.0.0a.tar.bz2 && \
 	wget http://ftp.gnu.org/gnu/binutils/binutils-2.25.tar.bz2 && \
 	tar xjf binutils-2.25.tar.bz2 && \
 	wget http://downloads.sourceforge.net/project/mingw-w64/mingw-w64/mingw-w64-release/mingw-w64-v3.1.0.tar.bz2 && \
@@ -35,9 +41,16 @@ RUN \
 	tar xjf gcc-4.9.2.tar.bz2
 
 RUN \
+	mkdir -p $BUILDROOT/gmp && \
+	cd $BUILDROOT/gmp && \
+	$SRC/gmp-6.0.0/configure --host=$HOST --build=$BUILD --prefix=$PREFIX --disable-shared --enable-static --enable-cxx && \
+	make && \
+	make install
+
+RUN \
 	mkdir -p $BUILDROOT/binutils && \
 	cd $BUILDROOT/binutils && \
-	$SRC/binutils-2.25/configure --prefix=$DEST --with-sysroot=$DEST --host=i686-w64-mingw32 --target=x86_64-w64-mingw32 --disable-multilib && \
+	$SRC/binutils-2.25/configure --prefix=$DEST --with-sysroot=$DEST --host=$HOST --target=$TARGET --disable-multilib && \
 	make && \
 	make install
 
@@ -52,26 +65,26 @@ RUN \
 RUN \
 	mkdir -p $BUILDROOT/headers && \
 	cd $BUILDROOT/headers && \
-	$SRC/mingw-w64-v3.1.0/mingw-w64-headers/configure --prefix=$DEST/x86_64-w64-mingw32 --host=i686-w64-mingw32 --build=x86_64-w64-mingw32 && \
+	$SRC/mingw-w64-v3.1.0/mingw-w64-headers/configure --prefix=$PREFIX --host=$HOST --build=$BUILD && \
 	make && \
 	make install
 
 RUN \
-	ln -s $DEST/x86_64-w64-mingw32 $DEST/mingw && \
-	ln -s $DEST/x86_64-w64-mingw32/lib $DEST/x86_64-w64-mingw32/lib64
+	ln -s $PREFIX $DEST/mingw && \
+	ln -s $PREFIX/lib $PREFIX/lib32
 
 RUN \
 	mkdir -p $BUILDROOT/gcc && \
 	cd $BUILDROOT/gcc && \
-	$SRC/gcc-4.9.2/configure --host=i686-w64-mingw32 --build=x86_64-w64-mingw32 --target=x86_64-w64-mingw32 \
-	  --prefix=$DEST/x86_64-w64-mingw32 --with-sysroot=$DEST --disable-multilib --enable-languages=c,c++,fortran \
+	$SRC/gcc-4.9.2/configure --host=$HOST --build=$BUILD --target=$TARGET \
+	  --prefix=$PREFIX --with-sysroot=$DEST --disable-multilib --enable-languages=c,c++,fortran \
 	  --disable-shared --enable-static --enable-plugins \
-	  --enable-sjlj-exceptions --disable-seh-exceptions --enable-threads=win32 \
+	  --enable-sjlj-exceptions --disable-dw2-exceptions --enable-threads=win32 \
 	  --disable-cloog-version-check --enable-cloog-backend=isl --disable-isl-version-check \
 	  --enable-libgomp --disable-libstdcxx-pch --enable-fully-dynamic-string --enable-libstdcxx-time \
 	  --disable-nls --disable-werror --enable-checking=release \
 	  --with-gnu-as --with-gnu-ld \
-	  CFLAGS="-I$SRC/gcc-4.9.2/gcc/ginclude -I/usr/x86_64-w64-mingw32/include" && \
+	  CFLAGS="-I$SRC/gcc-4.9.2/gcc/ginclude -I/usr/x86_64-w64-mingw32" && \
 	  LDFLAGS="-static" \
 	make all-gcc && \
 	make install-gcc
