disable bundled prerequisites

--- a/i686-w64-mingw32/Dockerfile
+++ b/i686-w64-mingw32/Dockerfile
@@ -51,9 +51,9 @@ RUN \
 	make && \
 	make install
 
-RUN \
-	cd $SRC/gcc-4.9.2 && \
-	./contrib/download_prerequisites
+# RUN \
+#	cd $SRC/gcc-4.9.2 && \
+#	./contrib/download_prerequisites
 
 RUN \
 	mkdir -p $SRC/gcc-4.9.2/gcc/winsup/mingw && \
