--- a/i686-w64-mingw32/Dockerfile
+++ b/i686-w64-mingw32/Dockerfile
@@ -94,6 +94,8 @@ RUN \
 RUN \
 	mkdir -p $BUILDROOT/gcc && \
 	cd $BUILDROOT/gcc && \
+	CPPFLAGS="-I$PREFIX/include -I/usr/x86_64-w64-mingw32" \
+	LDFLAGS="-L$PREFIX/lib -static" && \	
 	$SRC/gcc-4.9.2/configure --host=$HOST --build=$BUILD --target=$TARGET \
 	  --prefix=$PREFIX --with-sysroot=$DEST --disable-multilib --enable-languages=c,c++,fortran \
 	  --with-gmp=$PREFIX --with-mpfr=$PREFIX \
@@ -103,7 +105,5 @@ RUN \
 	  --enable-libgomp --disable-libstdcxx-pch --enable-fully-dynamic-string --enable-libstdcxx-time \
 	  --disable-nls --disable-werror --enable-checking=release \
 	  --with-gnu-as --with-gnu-ld \
-	  CFLAGS="-I$PREFIX/include -I/usr/x86_64-w64-mingw32" \
-	  LDFLAGS="-L$PREFIX/lib -static" && \
 	make all-gcc && \
 	make install-gcc
