--- a/i686-w64-mingw32/Dockerfile
+++ b/i686-w64-mingw32/Dockerfile
@@ -12,14 +12,14 @@ RUN \
 	useradd -ms /bin/bash builder && \
 	apt-get update && \
 	apt-get -y dist-upgrade && \
-	apt-get install -y wget make bzip2 gcc texinfo binutils-mingw-w64-i686 mingw-w64-i686-dev gcc-mingw-w64-i686 \
-	g++-mingw-w64-i686 gfortran-mingw-w64-i686 mingw-w64 m4
+	apt-get install -y wget make bzip2 gcc texinfo binutils-mingw-w64-x86_64 mingw-w64-x86_64-dev gcc-mingw-w64-x86_64 \
+	g++-mingw-w64-x86_64 gfortran-mingw-w64-x86_64 mingw-w64 m4
 
 USER builder
 
 ENV HOST x86_64-w64-mingw32
 ENV BUILD x86_64-w64-mingw32
-ENV TARGET i686-w64-mingw32
+ENV TARGET x86_64-w64-mingw32
 ENV BUILDROOT /home/builder/mingw
 ENV SRC $BUILDROOT/sources
 ENV DEST $BUILDROOT/dest
