--- a/i686-w64-mingw32/Dockerfile
+++ b/i686-w64-mingw32/Dockerfile
@@ -100,3 +100,20 @@ RUN \
 	make && \
 	make install
 
+RUN \
+	mkdir -p $BUILDROOT/gcc && \
+	cd $BUILDROOT/gcc && \
+	mkdir -p gcc && ln -sf auto-host.h gcc/auto-build.h && \
+	$SRC/gcc-4.9.2/configure --build=$BUILD --host=$HOST --target=$TARGET \
+	  --prefix=$PREFIX --with-sysroot=$DEST --disable-multilib --enable-languages=c,c++,fortran \
+	  --with-gmp=$PREFIX --with-mpfr=$PREFIX --with-mpc=$PREFIX \
+	  --disable-shared --enable-static --enable-plugins \
+	  --enable-sjlj-exceptions --disable-dw2-exceptions --disable-seh-exceptions --enable-threads=win32 \
+	  --disable-cloog-version-check --enable-cloog-backend=isl --disable-isl-version-check \
+	  --enable-libgomp --disable-libstdcxx-pch --enable-fully-dynamic-string --enable-libstdcxx-time \
+	  --disable-nls --disable-werror --enable-checking=release \
+	  --with-gnu-as --with-gnu-ld && \
+	make maybe-all-libiberty && \
+	mkdir -p build-$BUILD/libiberty && cp libiberty/pex-win32.o build-$BUILD/libiberty && touch -t 12312359 build-$BUILD/libiberty/pex-win32.o && \
+	make && \
+	make install
